<resources>
    <string name="app_name">顶牛小秘</string>

    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="income_statement">收入报表</string>
    <string name="label">标签</string>
    <string name="summary">汇总</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="outtime">逾期</string>
    <string name="image">图片</string>
    <string name="confirm">确定</string>
    <string name="preview">预览</string>
    <string name="select">选择</string>
</resources>
